# HandOn1

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  channel_mixer.cpp  channel_mixer.h  main.cpp  resampler.cpp  resampler.h  sample_codec.cpp  sample_codec.h  wav_converter.cpp  wav_reader.cpp  wav_reader.h  wav_types.h  wav_writer.cpp
.github/workflows/: build.yml
src/: wav_converter.h  wav_writer.h
tests/: test_channel_mixer.cpp  test_e2e.cpp  test_helpers.h  test_integration.cpp  test_resampler.cpp  test_sample_codec.cpp  test_wav_converter.cpp  test_wav_reader.cpp  test_wav_writer.cpp
